--- a/Code/EditorPlugins/Assets/EditorPluginAssets/CMakeLists.txt
+++ b/Code/EditorPlugins/Assets/EditorPluginAssets/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(${PROJECT_NAME}
   EditorFramework
   SharedPluginAssets
   ModelImporter
+  ModelImporter2
   GameEngine
 )
 
